fixies for button collapse

--- a/templates/mitalent/css/navigation.css
+++ b/templates/mitalent/css/navigation.css
@@ -75,7 +75,7 @@
 #shopping-cart {
     float: right;
     margin-right: 10%;
-    margin-left:10%;
+    margin-left:5%;
     padding-left: 30px;
     padding-right: 30px;
     background-color: #00c8c8;
@@ -89,6 +89,7 @@
 
 .currency-menu {
     float: left;
+    margin-left:10%;
 }
 
 .currency-menu ul {
@@ -134,3 +135,13 @@
     color: #999999;
 }
 
+.navigation-bar .collapse {
+    border: none;
+    box-shadow: none;
+    width: 100%;
+    background-color: rgb(51, 51, 51);
+}
+
+.navigation-bar .collapse .nav .navbar-nav .navbar-right {
+    margin: 0;
+}
